[2단계 - 블랙잭(베팅)] 루나(남민정) 미션 제출합니다.  (#322)
* refactor(Deck): LinkedList -> List 로 수정

* refactor: Deck 생성 방식 및 cache list return 방식 수정

* docs: 2단계 요구사항 추가

* feat: player 배팅금액 입력 기능 추가

* refactor(Participant): 메서드명 변경

* feat: 승패에 따른 배팅 금액 계산 추가

* refactor(Player): 사용하지 않는 isWin 메서드 삭제

* refactor(Participant): 사용하지 않는 CompareTo 메서드 삭제

* test(ResultTest): 테스트 생성

* test: 점수 계산 메서드 통일 및 접근제어자 변경

* refactor: 필요없는 import 제거

* refactor: blackJack 확인 기준 수정

* refactor(Cards): calculateScore 수정

* refactor: 결과값 계산 람다식 사용

* refactor: Result -> PlayerResult로 이름 변경

* refactor: result 결과값 및 outputView 연결 수정

* refactor: money를 BigDecimal 타입으로 변경

* refactor: LinkedHashMap으로 stream collector 수정

* feat: 편의메서드(isNotBlackJack) 추가

* fix: 블랙잭 결과 계산시의 오류 수정

* refactor: final 태그 추가

* refactor: X,Y 이름 변경

* refactor(Participant): isNotBlackJack 메서드 변경

* refactor: 결과 확인 Int -> BigDecimal로 변경

* refactor: multiply 테스트 코드 추가